--- a/MarketPlaceKolo/pom.xml
+++ b/MarketPlaceKolo/pom.xml
@@ -76,5 +76,10 @@
             <artifactId>eclipselink</artifactId>
             <version>2.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 </project>
